--- a/.github/workflows/update_docker.yml
+++ b/.github/workflows/update_docker.yml
@@ -24,6 +24,7 @@ jobs:
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           flake8 .
+          pep257 .
 
   generate:
     runs-on: ubuntu-latest
