--- a/.github/workflows/update_docker.yml
+++ b/.github/workflows/update_docker.yml
@@ -66,6 +66,18 @@ jobs:
           - docker_image: "pages"
             docker_repo: "github"
             docker_target: "dev"
+          - docker_image: "citadel"
+            docker_repo: "ignition"
+            docker_target: "base"
+          - docker_image: "citadel"
+            docker_repo: "ignition"
+            docker_target: "dev"
+          - docker_image: "blueprint"
+            docker_repo: "ignition"
+            docker_target: "base"
+          - docker_image: "blueprint"
+            docker_repo: "ignition"
+            docker_target: "dev"
 
     steps:
       - uses: actions/checkout@v2
