--- a/.github/workflows/update_docker.yml
+++ b/.github/workflows/update_docker.yml
@@ -11,6 +11,13 @@ on:
     branches:
       - main
 jobs:
+  cleanup:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.4.1
+        with:
+          access_token: ${{ secrets.GITHUB_TOKEN }}
   lint:
     runs-on: ubuntu-latest
     steps:
