--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
 	"extensions": [
 		"ms-azuretools.vscode-docker",
 		"ms-python.python",
-		"redhat-vscode.yaml"
+		"redhat.vscode-yaml"
 	],
 	
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
