--- a/.github/workflows/check_docker.yml
+++ b/.github/workflows/check_docker.yml
@@ -71,4 +71,4 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          ./update.py ${{ matrix.docker_image }}
+          ./update.py ${{ matrix.docker_image }} --verbose
