--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -1,4 +1,4 @@
-name: publish_docs
+name: publish-docs
 
 on:
   push:
@@ -11,5 +11,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - name: Setup config
+        run: |
+          wget https://github.com/athackst/athackst.github.io/archive/mkdocs.zip -O temp.zip
+          unzip temp.zip
+          mv athackst.github.io-mkdocs/* .
+          rm temp.zip
+          cat mkdocs.yml
       - name: MkDocs Simple action
-        uses: athackst/mkdocs-simple-plugin@v0.1.1
+        uses: athackst/mkdocs-simple-plugin@v0.1.2
+        env:
+          REPO_URL: http://github.com/${{ github.repository }} 
+          SITE_NAME: ${{ github.repository }}
+          SITE_URL: http://athackst.github.io/${{github.event.pull_request.head.repo.full_name}}
