--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:
+    
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -38,7 +40,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          ./build.py ${{ matrix.docker_image }} --push --auth --verbose 
+          ./build.py ${{ matrix.docker_image }} --push --auth --verbose
 
   readme:
     needs: docker
@@ -64,5 +66,5 @@ jobs:
         with:
           destination_container_repo: athackst/${{ matrix.docker_repo }}
           provider: dockerhub
-          short_description: 'An assortment of development containers for ${{ matrix.docker_repo }}'
-          readme_file: ${{ matrix.docker_repo }}/'README.md'
+          short_description: "An assortment of development containers for ${{ matrix.docker_repo }}"
+          readme_file: ${{ matrix.docker_repo }}/README.md
