--- a/.github/workflows/push_docker.yml
+++ b/.github/workflows/push_docker.yml
@@ -26,6 +26,7 @@ jobs:
           - "foxy"
           - "blueprint"
           - "citadel"
+          - "dome"
           - "gazebo10"
           - "gazebo11"
           - "pages"
