--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,11 +1,19 @@
-name: check_dockerfiles
+name: Dockerfiles
 
 on:
+  schedule:
+    # * is a special character in YAML so you have to quote this string
+    - cron: "0 0 1 * *"
+  push:
+    branches:
+      - main
+    paths:
+      - "**.Dockerfile"
   pull_request:
     branches:
       - main
-  # TODO: filter the paths once github supports required checks with filters
   workflow_dispatch:
+
 jobs:
   cleanup:
     runs-on: ubuntu-latest
@@ -63,15 +71,24 @@ jobs:
           - "gazebo10"
           - "gazebo11"
           - "pages"
-
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python
         uses: actions/setup-python@v2.2.1
         with:
           python-version: "3.x"
-      - name: Build
+      - name: Build Setup
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Build and Push
+        if: github.ref == 'refs/heads/main'
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        run: |
+          ./build.py ${{ matrix.docker_image }} --push --auth --verbose
+      - name: Build only
+        if: github.ref != 'refs/heads/main'
+        run: |
           ./build.py ${{ matrix.docker_image }} --verbose
