--- a/.github/workflows/docker_readme.yml
+++ b/.github/workflows/docker_readme.yml
@@ -1,5 +1,5 @@
 name: push_readme
-
+# Update the readme file for docker images when the description changes and is merged into main.
 on:
   push:
     branches:
@@ -7,6 +7,7 @@ on:
     paths:
       - "**.md"
   workflow_dispatch:
+
 jobs:
   readme:
     runs-on: ubuntu-latest
@@ -23,13 +24,11 @@ jobs:
     steps:
       - name: git checkout
         uses: actions/checkout@v2
-      - name: push README to Dockerhub
-        uses: christian-korneck/update-container-description-action@v1
-        env:
-          DOCKER_USER: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASS: ${{ secrets.DOCKER_RM_PASSWORD }}
+      - name: Update repo description
+        uses: peter-evans/dockerhub-description@v2
         with:
-          destination_container_repo: athackst/${{ matrix.docker_repo }}
-          provider: dockerhub
-          short_description: "An assortment of development containers for ${{ matrix.docker_repo }}"
-          readme_file: ${{ matrix.docker_repo }}/README.md
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_RM_PASSWORD }}
+          repository: athackst/${{ matrix.docker_repo }}
+          readme-filepath: ${{ matrix.docker_repo }}/README.md
+          short-description: "An assortment of development containers for ${{ matrix.docker_repo }}"
