add galactic to workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -49,6 +49,7 @@ jobs:
           - "noetic"
           - "dashing"
           - "foxy"
+          - "galactic"
           - "gazebo9"
           - "gazebo11"
           - "citadel"
