Update rules to run dockerfile workflow if changed.

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,7 @@ on:
       - main
     paths:
       - "**.Dockerfile"
+      - ".github/workflows/docker.yml"
   pull_request:
   workflow_dispatch:
 
