update dockerhub account to althack

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -73,8 +73,8 @@ jobs:
       - name: Push
         if: github.ref == 'refs/heads/main'
         env:
-          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+          DOCKER_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
         run: |
           ./build.py --push ${{ matrix.docker_image }}
         
