--- a/.github/workflows/docker_readme.yml
+++ b/.github/workflows/docker_readme.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths:
       - "**.md"
+      - ".github/workflows/docker_readme.yml"
   workflow_dispatch:
 
 jobs:
@@ -30,5 +31,13 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_RM_PASSWORD }}
           repository: athackst/${{ matrix.docker_repo }}
+          readme-filepath: ${{ matrix.docker_repo }}/README.md
+          short-description: "[Deprecated-> use althack/${{ matrix.docker_repo }}]"
+      - name: Update repo description (althack)
+        uses: peter-evans/dockerhub-description@v2.4.2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+          repository: althack/${{ matrix.docker_repo }}
           readme-filepath: ${{ matrix.docker_repo }}/README.md
           short-description: "An assortment of development containers for ${{ matrix.docker_repo }}"
