Update pub docs to include dispatch and htmlproofer

--- a/.github/workflows/publish_docs.yml
+++ b/.github/workflows/publish_docs.yml
@@ -5,9 +5,11 @@ on:
     branches:
       - main
   workflow_dispatch:
+  repository_dispatch:
+    types: [publish-docs]
 
 jobs:
-  publish:
+  publish-docs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,3 +18,7 @@ jobs:
         uses: athackst/athackst.mkdocs@main
       - name: Build and push docs to gh-pages
         uses: athackst/mkdocs-simple-plugin@main
+      - name: Htmlproofer
+        uses: athackst/htmlproofer-action@main
+        with:
+          directory: site
