--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: "3.x"
+          python-version: "3.7"
       - name: Verify dockerfiles
         run: |
           python -m pip install --upgrade pip
