--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -51,6 +51,7 @@ jobs:
           - foxy
           - gazebo11
           - gazebo9
+          - fortress
           - edifice
           - dome
           - citadel
