--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -93,6 +93,7 @@
         "foxy",
         "gazebo11",
         "gazebo9",
+        "fortress",
         "edifice",
         "dome",
         "citadel",
