--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,31 @@
-jinja2==3.0.2
-pylint==2.11.1
+astroid==2.8.5
 autopep8==1.6.0
-flake8==4.0.1
-pep257==0.7.0
+certifi==2021.10.8
+charset-normalizer==2.0.7
 click==8.0.3
 docker==5.0.3
+flake8==4.0.1
+idna==3.3
+isort==5.10.1
+Jinja2==3.0.2
+json-spec==0.10.1
+jsoncomment==0.4.2
+lazy-object-proxy==1.6.0
+MarkupSafe==2.0.1
+mccabe==0.6.1
+pep257==0.7.0
+platformdirs==2.4.0
+pycodestyle==2.8.0
 pydocstyle==6.1.1
+pyflakes==2.4.0
+pylint==2.11.1
+requests==2.26.0
+ruamel.yaml==0.17.17
+ruamel.yaml.clib==0.2.6
 six==1.16.0
+snowballstemmer==2.1.0
+toml==0.10.2
+typing-extensions==4.0.0
+urllib3==1.26.7
+websocket-client==1.2.1
+wrapt==1.13.3
