--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,9 @@ docker==5.0.3
 flake8==4.0.1
 idna==3.3
 isort==5.10.1
-Jinja2==3.0.2
+Jinja2==3.0.3
 json-spec==0.10.1
+json5==0.9.6
 jsoncomment==0.4.2
 lazy-object-proxy==1.6.0
 MarkupSafe==2.0.1
@@ -25,7 +26,7 @@ ruamel.yaml.clib==0.2.6
 six==1.16.0
 snowballstemmer==2.1.0
 toml==0.10.2
-typing-extensions==4.0.0
+typing_extensions==4.0.0
 urllib3==1.26.7
 websocket-client==1.2.1
 wrapt==1.13.3
