--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,16 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v2.2.2
         with:
-          python-version: "3.7"
-      - name: Verify dockerfiles
+          python-version: 3.x
+      - name: Install pip packages
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: flake8
+        run: |
+          pip install flake8
           flake8 .
-          pep257 .
+      - name: pydocstyle
+        run: |
+          pip install pydocstyle
+          pydocstyle .
+
