--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,7 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.x
+          cache: pip
       - name: Verify dockerfiles
         run: |
           python -m pip install --upgrade pip
@@ -62,6 +63,7 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.x
+          cache: pip
       - name: Build Setup
         run: |
           python -m pip install --upgrade pip
