--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-python@v2.3.0
         with:
           python-version: 3.x
+          cache: 'pip'
       - name: Install pip packages
         run: |
           python -m pip install --upgrade pip
