--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -90,8 +90,11 @@
         "noetic",
         "melodic",
         "humble",
+        "humble-cuda",
         "galactic",
+        "galactic-cuda",
         "foxy",
+        "foxy-cuda",
         "gazebo11",
         "gazebo9",
         "fortress",
