Update eol for ignition ediface and add humble for ROS2

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -48,12 +48,12 @@ jobs:
         docker_image:
           - noetic
           - melodic
+          - humble
           - galactic
           - foxy
           - gazebo11
           - gazebo9
           - fortress
-          - edifice
           - dome
           - citadel
     steps:
