--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,16 @@
+certifi==2022.6.15
+charset-normalizer==2.1.0
 click==8.1.3
 docker==5.0.3
-flake8==4.0.1
+flake8==5.0.3
+idna==3.3
 Jinja2==3.1.2
-pycodestyle==2.8.0
-pyflakes==2.4.0
+MarkupSafe==2.1.1
+mccabe==0.7.0
+pycodestyle==2.9.0
+pyflakes==2.5.0
+requests==2.28.1
 ruamel.yaml==0.17.21
+ruamel.yaml.clib==0.2.6
+urllib3==1.26.11
+websocket-client==1.3.3
