--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -56,6 +56,7 @@ jobs:
           - fortress
           - dome
           - citadel
+          - garden
     steps:
       - uses: actions/checkout@v3
       - name: Set up Python
