--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,15 +14,12 @@ on:
   pull_request:
   workflow_dispatch:
 
-jobs:
-  cleanup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Cancel Previous Runs
-        uses: styfle/cancel-workflow-action@0.10.1
-        with:
-          access_token: ${{ secrets.GITHUB_TOKEN }}
+# Cancel in-progress funs of the same workflow
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 
+jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
