--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 mccabe==0.7.0
+packaging==21.3
 pycodestyle==2.9.1
 pyflakes==2.5.0
+pyparsing==3.0.9
 requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
